[gd_scene load_steps=22 format=3 uid="uid://bb00ncssuceu8"]

[ext_resource type="Script" path="res://character.gd" id="1_i252i"]
[ext_resource type="Texture2D" uid="uid://cc5ttayy3dfxi" path="res://wizzard (2) (2).png" id="2_txvic"]
[ext_resource type="Script" path="res://arm_control.gd" id="3_38rif"]
[ext_resource type="Texture2D" uid="uid://b6tjn0k2dl10v" path="res://New Piskel (10).png" id="4_7coke"]
[ext_resource type="Script" path="res://arm_anim.gd" id="4_yu6go"]
[ext_resource type="Script" path="res://sword.gd" id="6_dk4sv"]
[ext_resource type="Texture2D" uid="uid://bgik45yhjyooy" path="res://New Piskel (14).png" id="7_18l1j"]
[ext_resource type="Texture2D" uid="uid://cwt1rggmgfwei" path="res://bow_and_arrow.png" id="8_1xnef"]

[sub_resource type="Animation" id="Animation_nsh4c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickaxe:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sword:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pickaxe:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("bow:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v3a6i"]
resource_name = "bow"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bow/arrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bow/arrow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33.9411, -7.62939e-06), Vector2(19.799, -3.50149e-06)]
}

[sub_resource type="Animation" id="Animation_qdypp"]
resource_name = "idle left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickaxe:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2afc5"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickaxe:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fyfmu"]
resource_name = "mine_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, 0.785398, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickaxe:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jeh0h"]
resource_name = "mine_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, -0.785398, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickaxe:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="Animation" id="Animation_ursrv"]
resource_name = "no_tool"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickaxe:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ri84r"]
resource_name = "pic_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickaxe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickaxe:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gqp66"]
resource_name = "pic_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pickaxe:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickaxe:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qv5c4"]
resource_name = "release"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickaxe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sword:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bow/arrow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bow:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6ltwv"]
resource_name = "swing_l"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.785398, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0944, 3.14159]
}

[sub_resource type="Animation" id="Animation_7xue1"]
resource_name = "swing_r"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0472, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.698132, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xeijr"]
_data = {
"RESET": SubResource("Animation_nsh4c"),
"bow": SubResource("Animation_v3a6i"),
"idle left": SubResource("Animation_qdypp"),
"idle_right": SubResource("Animation_2afc5"),
"mine_left": SubResource("Animation_fyfmu"),
"mine_right": SubResource("Animation_jeh0h"),
"no_tool": SubResource("Animation_ursrv"),
"pic_left": SubResource("Animation_ri84r"),
"pic_right": SubResource("Animation_gqp66"),
"release": SubResource("Animation_qv5c4"),
"swing_l": SubResource("Animation_6ltwv"),
"swing_r": SubResource("Animation_7xue1")
}

[node name="character" type="CharacterBody2D"]
collision_layer = 2147516997
collision_mask = 33349
script = ExtResource("1_i252i")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-2, -3, -2, 10, -3, 10, -3, 14, 7, 14, 7, 13, 7, 10, 6, 10, 6, -3, 5, -7, 4, -11, 0, -11, -1, -9, -1, -7, -1, -3)

[node name="AnimatedSprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(2, 0)
texture = ExtResource("2_txvic")
vframes = 2

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -15)
zoom = Vector2(5, 5)
position_smoothing_enabled = true

[node name="is_mining" type="Timer" parent="."]
wait_time = 0.1

[node name="is_attacking" type="Timer" parent="."]
wait_time = 0.2

[node name="cool_down" type="Timer" parent="."]
wait_time = 0.25

[node name="arm_control" type="Sprite2D" parent="."]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(2, 0)
rotation = -0.785398
offset = Vector2(5, 0)
vframes = 2
frame = 1
script = ExtResource("3_38rif")

[node name="arm" type="Sprite2D" parent="arm_control"]
texture = ExtResource("2_txvic")
offset = Vector2(5, 0)
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="arm_control/arm"]
libraries = {
"": SubResource("AnimationLibrary_xeijr")
}
script = ExtResource("4_yu6go")

[node name="sword" type="Sprite2D" parent="arm_control/arm"]
position = Vector2(8.9282, -0.535897)
rotation = 3.14159
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_18l1j")
offset = Vector2(-0.5, -8)
script = ExtResource("6_dk4sv")

[node name="Area2D" type="Area2D" parent="arm_control/arm/sword"]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="arm_control/arm/sword/Area2D"]
rotation = 0.00464485
polygon = PackedVector2Array(-2.59343, -20.5423, -2.59343, -20.5423, -0.344193, -25.0078, 2.62185, -19.7816, 1.82818, -3.386, -1.89858, -3.39698)

[node name="pickaxe" type="Sprite2D" parent="arm_control/arm"]
visible = false
position = Vector2(9, -2.38419e-07)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_7coke")
offset = Vector2(0, -9)

[node name="bow" type="Sprite2D" parent="arm_control/arm"]
visible = false
position = Vector2(-7.07107, 1.19209e-06)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_1xnef")
hframes = 3
vframes = 4

[node name="arrow" type="Sprite2D" parent="arm_control/arm/bow"]
visible = false
position = Vector2(19.799, -3.50149e-06)
scale = Vector2(0.86, 0.86)
texture = ExtResource("8_1xnef")
hframes = 3
vframes = 4
frame = 9

[node name="arrow spawn point" type="Marker2D" parent="arm_control/arm/bow"]
position = Vector2(22.6274, -3.8147e-06)

[node name="markers" type="Node2D" parent="."]
visible = false

[node name="Marker2D" type="Marker2D" parent="markers"]
position = Vector2(3, 1)

[node name="Marker2D2" type="Marker2D" parent="markers"]
position = Vector2(2, 1)

[node name="Marker2D3" type="Marker2D" parent="markers"]
position = Vector2(2, 2)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 36928
collision_mask = 36928

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PackedVector2Array(-2, -3, -2, 10, -3, 10, -3, 14, 7, 14, 7, 13, 7, 10, 6, 10, 6, -3, 5, -7, 4, -11, 0, -11, -1, -9, -1, -7, -1, -3)

[connection signal="timeout" from="is_mining" to="." method="_on_is_mining_timeout"]
[connection signal="timeout" from="is_attacking" to="." method="_on_is_attacking_timeout"]
[connection signal="timeout" from="cool_down" to="." method="_on_cool_down_timeout"]
[connection signal="arrow" from="arm_control/arm/AnimationPlayer" to="." method="_on_animation_player_arrow"]
[connection signal="body_entered" from="arm_control/arm/sword/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="arm_control/arm/sword/Area2D" to="arm_control/arm/sword" method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
